Responsive partially corrected on small devices

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -19,6 +19,9 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    >h2{
+        font-size: 1.8em;
+    }
 }
 .header-mobile .menu-btn{
     @media only screen and (min-width: 900px) {
@@ -48,7 +51,7 @@ header{
         display: flex;
         >li{
             padding-left: 1em;
-            font-size: 1.4em;
+            font-size: 1.7em;
         }
     }
 
